--- a/sass/layouts/header/_index.scss
+++ b/sass/layouts/header/_index.scss
@@ -1,8 +1,5 @@
-
-
 header {
-  
-   background-color: var(--absolute-color);
+    background-color: var(--absolute-color);
     box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
     height: 5rem;
     overflow: hidden;
@@ -33,25 +30,76 @@ header {
         //transition: all .2s ease-in-out;
    
     }
-
-   
 }
 
 .favorites__wrapper {
-  background-color: var(--bg-color);
-  border-left: 1px solid var(--header-bg-color);
-  bottom: 0;
-  color: var(--text-color);
-  padding: 2rem;
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 400px;
-  z-index: 9;
-  transform: translateX(100%);
+    background-color: var(--bg-color);
+    border-left: 1px solid var(--header-bg-color);
+    bottom: 0;
+    color: var(--text-color);
+    padding: 2rem;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 400px;
+    z-index: 9;
+    transform: translateX(100%);
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
 
+    .template-favorites {
+        @for $i from 1 through 5 {
+            &:nth-child(#{$i}) {
+                opacity: 1;
+                transition: all (300ms * $i) ease-in-out;
+                transform: matrix(1, 0, 0, 1, 0, 0);
+                transition-delay: 0.2s;
+            }
+        }
+    }
 }
+
 .logo {
     width: 2.5rem;
     height: 5rem;
+}
+
+.label {
+    color: #000;
+    background-color: #fff;
+    border-radius: 50px;
+    font-weight: 900;
+    font-size: 12px;
+    text-align: center;
+    white-space: nowrap;
+    padding: 10px;
+}
+
+.label.white {
+    background-color: #fff;
+    box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.3);
+}
+
+.label.white:hover {
+    transform: scale(2);
+    transition: all .3s ease-in-out;
+    background-color: #000;
+}
+
+.close {
+    cursor: pointer;
+    background-color: var(--text-color);
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    color: var(--absolute-color);
+
+    i {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+    }
 }
