--- a/sass/layouts/main/_index.scss
+++ b/sass/layouts/main/_index.scss
@@ -1,72 +1,137 @@
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 main {
-  flex: none;
-  margin-top: 5rem;
-  display: block;
-  @include mq(lg) {
-    flex: 1 1 auto;
-  }
+    flex: none;
+    margin-top: 5rem;
+    display: block;
+    background-color: var(--absolute-color);
+
+    @include mq(lg) {
+        flex: 1 1 auto;
+    }
 }
 
 .hero {
-  background-color: var(--color-bluelight-100);
-  height: 550px;
-  width: 100%;
-  background-size: cover;
-  background-position: center center;
+    background-color: var(--color-bluelight-100);
+    height: 550px;
+    width: 100%;
+    background-size: cover;
+    background-position: center center;
 }
 
 .content {
-  &--overlap {
-    background-color: #fff;
-    border-radius: 8px 8px 0 0;
-    margin: -40px 56px 0;
-  }
+    &--overlap {
+        background-color: #fff;
+        border-radius: 8px 8px 0 0;
+        margin: -40px 0 0;
+    }
 }
 
 .list__places {
-  &--item {
-    width: 100%;
-    max-width: 250px;
+    &--item {
+        width: 100%;
 
-    &--picture {
-      height: 350px;
-      background-color: var(--color-bluelight-100);
+        @include mq(md) {
+            max-width: calc(100% / 2);
+        }
+
+
+        @include mq(lg) {
+            max-width: calc(100% / 4);
+        }
+
+
+        &--picture {
+          height: 100%;
+            max-height: 350px;
+        }
     }
+
+    
+
+    .list__item {
+        padding: 10px;
+
+        p {
+            margin: 0px;
+        }
+    }
+}
+
+// max-width: calc(100% / 4);
+
+.valueProps{
+  &__list{
+    
   }
+
+  &__items{
+    width: 100%;
+    @include mq(md) {
+        max-width: calc(100% / 2);
+    }
+    @include mq(lg) {
+        max-width: calc(100% / 4);
+    }
+
+  }
+
+  &__title {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    margin: 0;
+    font-weight: 700;
+    color: var(--text-color);
+}
+
+  &__subtitle {
+    font-size: .875rem;
+    line-height: 1.125rem;
+    color: var(--dark-color);
+}
+&__icon {
+  font-size: 1.4rem;
+    width: 40px;
+    height: 40px;
+    line-height: 1.4rem;
+    display: flex;
+    background-color: antiquewhite;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
 }
 
 .loader {
-  width: 100%;
-  background-color: #fff;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2.5rem;
+    width: 100%;
+    background-color: #fff;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5rem;
 
-  .rotate {
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    border-left-color: var(--color-bluelight-20);
-    animation: spin 0.5s linear infinite;
-    transition: animation 0.2s ease-in-out;
-  }
-
-  @keyframes spin {
-    to {
-      transform: rotate(1turn);
+    .rotate {
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        border-left-color: var(--color-bluelight-20);
+        animation: spin 0.5s linear infinite;
+        transition: animation 0.2s ease-in-out;
     }
-  }
+
+    @keyframes spin {
+        to {
+            transform: rotate(1turn);
+        }
+    }
 }
