--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -1,5 +1,5 @@
 .input {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    padding: .91rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 0.91rem;
 }
