--- a/sass/layouts/header/_index.scss
+++ b/sass/layouts/header/_index.scss
@@ -1,105 +1,123 @@
 header {
-    background-color: var(--absolute-color);
-    box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
-    height: 5rem;
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-    z-index: 9;
-    color: var(--text-color);
+  background-color: var(--absolute-color);
+  box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
+  height: 5rem;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  z-index: 9;
+  color: var(--text-color);
 }
 
 #getFavorites {
-    position: relative;
-    cursor: pointer;
+  position: relative;
+  cursor: pointer;
 
-    span {
-        align-items: center;
-        background-color: $bg-color;
-        border-radius: 50px;
-        color: #fff;
-        display: flex;
-        font-size: 12px;
-        height: 20px;
-        justify-content: center;
-        position: absolute;
-        right: 0;
-        top: -10px;
-        width: 20px;
-
-        //transition: all .2s ease-in-out;
-   
+  span {
+    &.show {
+      align-items: center;
+      background-color: $bg-color;
+      border-radius: 50px;
+      color: #fff;
+      display: flex;
+      font-size: 12px;
+      height: 20px;
+      justify-content: center;
+      position: absolute;
+      right: 0;
+      top: -10px;
+      width: 20px;
     }
+  }
 }
 
 .favorites__wrapper {
-    background-color: var(--bg-color);
-    border-left: 1px solid var(--header-bg-color);
-    bottom: 0;
-    color: var(--text-color);
-    padding: 2rem;
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 400px;
-    z-index: 9;
-    transform: translateX(100%);
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
+  background-color: var(--bg-color);
+  border-left: 1px solid var(--header-bg-color);
+  bottom: 0;
+  color: var(--text-color);
+  padding: 2rem;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 400px;
+  z-index: 9;
+  transform: translateX(100%);
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
+  &--inner-content {
+    padding: 0px;
+  }
 
-    .template-favorites {
-        @for $i from 1 through 5 {
-            &:nth-child(#{$i}) {
-                opacity: 1;
-                transition: all (300ms * $i) ease-in-out;
-                transform: matrix(1, 0, 0, 1, 0, 0);
-                transition-delay: 0.2s;
-            }
-        }
+  .template-favorites {
+    @for $i from 1 through 5 {
+      &:nth-child(#{$i}) {
+        opacity: 1;
+        transition: all (300ms * $i) ease-in-out;
+        transform: matrix(1, 0, 0, 1, 0, 0);
+        transition-delay: 0.2s;
+      }
     }
+  }
+
+  .delete__favorite i {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    border: 1px solid;
+    cursor: pointer;
+  }
 }
 
 .logo {
-    width: 2.5rem;
-    height: 5rem;
+  width: 2.5rem;
+  height: 5rem;
+  a {
+    height: 100%;
+    background-color: transparent;
+    display: flex;
+  }
 }
 
 .label {
-    color: #000;
-    background-color: #fff;
-    border-radius: 50px;
-    font-weight: 900;
-    font-size: 12px;
-    text-align: center;
-    white-space: nowrap;
-    padding: 10px;
+  color: #000;
+  background-color: #fff;
+  border-radius: 50px;
+  font-weight: 900;
+  font-size: 12px;
+  text-align: center;
+  white-space: nowrap;
+  padding: 10px;
 }
 
 .label.white {
-    background-color: #fff;
-    box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+  box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.3);
 }
 
 .label.white:hover {
-    transform: scale(2);
-    transition: all .3s ease-in-out;
-    background-color: #000;
+  transform: scale(2);
+  transition: all 0.3s ease-in-out;
+  background-color: #000;
 }
 
 .close {
-    cursor: pointer;
-    background-color: var(--text-color);
+  cursor: pointer;
+  background-color: var(--text-color);
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  color: var(--absolute-color);
+
+  i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
     width: 30px;
     height: 30px;
-    border-radius: 50px;
-    color: var(--absolute-color);
-
-    i {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        width: 30px;
-        height: 30px;
-        line-height: 30px;
-    }
+    line-height: 30px;
+  }
 }
