--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,5 +12,6 @@
 @import "components/columns";
 @import "layouts/header/index";
 @import "pages/index";
+@import "pages/page";
 
 @import "layouts/footer/index";
