--- a/sass/layouts/main/_index.scss
+++ b/sass/layouts/main/_index.scss
@@ -66,9 +66,11 @@ main {
 
 .valueProps {
   &__list {
+    margin-top: 2rem;
   }
 
   &__items {
+    padding: 0 10px;
     width: 100%;
     @include mq(md) {
       max-width: calc(100% / 2);
@@ -92,12 +94,13 @@ main {
     color: var(--dark-color);
   }
   &__icon {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     width: 40px;
     height: 40px;
-    line-height: 1.4rem;
+    line-height: 1.2rem;
     display: flex;
-    background-color: antiquewhite;
+    background-color: var(--color-white-10);
+    border: 1px solid var(--color-white-20);
     justify-content: center;
     align-items: center;
     border-radius: 50%;
